Sorting class update