@@ -19,28 +19,31 @@ public class MapFlatMapTest {
                 new Customer(103, "peter", "peter@gmail.com", Arrays.asList("38946328654", "3286487236")),
                 new Customer(104, "kely", "kely@gmail.com", Arrays.asList("389246829364", "948609467"))
         );
+
         //email주소 목록 List<String>
         List<String> emailList = customers.stream()  //Stream<Customer>
-                .map(cust -> cust.getEmail()) //Stream<String>
-                .collect(toList());//List<String>
+                //.map(cust -> cust.getEmail()) //Stream<String>
+                .map(Customer::getEmail)
+                //.collect(toList());//List<String>
+                .toList();
 
         emailList.forEach(System.out::println);
 
         customers.stream()
-                .map(Customer::getEmail)
-                .collect(toList())
+                .map(customer -> customer.getName().toUpperCase())
+                .toList()
                 .forEach(System.out::println);
 
         //map() : <R> Stream<R> map(Function<? super T,? extends R> mapper)
         List<List<String>> phoneList = customers.stream() //Stream<Customer>
                 .map(cust -> cust.getPhoneNumbers()) //Stream<List<String>>
-                .collect(toList()); //List<List<String>>
+                .toList(); //List<List<String>>
         System.out.println("phoneList = " + phoneList);
 
         //flatMap : <R> Stream<R> flatMap(Function<? super T,? extends Stream<? extends R>> mapper)
         List<String> phoneList2 = customers.stream() //Stream<Customer>
-                .flatMap(customer -> customer.getPhoneNumbers().stream())   //Stream<Stream<List<String>>>
-                .collect(toList());
+                .flatMap(customer -> customer.getPhoneNumbers().stream())   //Stream<String>
+                .toList();
         System.out.println("phoneList2 = " + phoneList2);
 
     }
